<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="#667994"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/lv_readtag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </ListView>
                </LinearLayout>
            </ScrollView>

            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|bottom" >

                <ImageView
                    android:id="@+id/readdisp_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/and_ico_rfid3" >
                </ImageView>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#455362" >

            <LinearLayout
                android:id="@+id/duplication_layout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" >

                <CheckBox
                    android:id="@+id/duplication_checkbox"
                    style="@style/CustomCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/readtag_duplication"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:text="@string/readtag_elapsed_time"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/elapsedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="25dp"
                    android:text="@string/readtag_init_time"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/readtag_seconds"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <ImageView
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/duplication_layout"
                android:src="@drawable/and_line2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2.5"
                    android:gravity="center_vertical"
                    android:text="@string/readtag_readcount"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/readcount"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dp"
                    android:text="0"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="#637386" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/readstart"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_btn_readtag_readstart" />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/readstart"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/and_btn_clear_g" />

            <ImageView
                android:id="@+id/sort"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/clear"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/and_btn_sort_g" />

            <ImageView
                android:id="@+id/save"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/sort"
                android:layout_weight="1"
                android:background="@drawable/and_btn_save2_g" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>