<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#455362">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/epc_code"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/epc_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#ffffff"
                android:inputType="textMultiLine"
                android:maxLength="24"
                android:padding="5dp"
                android:text="303515a52404230081400001"
                android:visibility="visible"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/product_code"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/product_code"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#ffffff"
                android:inputType="textMultiLine"
                android:maxLength="24"
                android:padding="5dp"
                android:visibility="visible"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/product_name"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#ffffff"
                android:inputType="textMultiLine"
                android:maxLength="24"
                android:padding="5dp"
                android:visibility="visible"
                />

            <ImageView
                android:id="@+id/save"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:background="@drawable/shape_btn_readtag_save" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="#455362"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/scan"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@drawable/shape_btn_readtag_readstart" />
            <ImageView
                android:id="@+id/delete"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/shape_btn_tagdatabase_delete" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>