<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#657484"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.89"
                android:orientation="horizontal" >
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                    <ImageView
                        android:id="@+id/menu_deviceconnection"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_btn_menu_deviceconnection" />

                    <ImageView
                        android:id="@+id/tag_database"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_btn_menu_deviceconnection" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_device_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/menu_device"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/tv_fmver_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/menu_fw_ver"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.62"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_device"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/tv_device_title"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/tv_device_title"
                        android:layout_weight="1"
                        android:background="@drawable/and_textfield1_u"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:text="" />

                    <TextView
                        android:id="@+id/tv_fmver"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignLeft="@+id/tv_device"
                        android:layout_alignTop="@+id/tv_fmver_title"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/and_textfield1_u"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="0.73"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_remaining_buttery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/menu_remaining_buttery"
                    android:textColor="#ffffff" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="10dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal" >

                        <FrameLayout
                            android:id="@+id/remaining_buttery"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="1dp"
                            android:layout_weight="0.08"
                            android:background="#009900" >
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.92" >
                        </FrameLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/icon_buttery"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.08"
                            android:background="@drawable/and_ico_battery1" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.92"
                            android:background="@drawable/and_ico_battery2" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_buttery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:textColor="@android:color/white" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- MainMENU -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/relativeLayout1"
            android:layout_weight="2"
            android:background="#455362"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/menu_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignRight="@+id/menu_barcode"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_menu_setting" />

                <ImageView
                    android:id="@+id/menu_read"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:layout_alignTop="@+id/menu_setting"
                    android:background="@drawable/shape_btn_menu_read" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/menu_barcode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_alignLeft="@+id/menu_setting"
                    android:layout_toRightOf="@+id/menu_setting"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_menu_barcode" />

                <ImageView
                    android:id="@+id/search_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/menu_read"
                    android:layout_alignTop="@+id/menu_barcode"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_menu_barcode" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical" >
                <ImageView
                    android:id="@+id/inventory_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/menu_barcode"
                    android:layout_alignBottom="@+id/parts_finder_app"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_menu_barcode" />

                <ImageView
                    android:id="@+id/parts_finder_app"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:layout_alignLeft="@+id/menu_deviceconnection"
                    android:layout_alignTop="@+id/menu_setting"
                    android:background="@drawable/shape_btn_menu_barcode" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>